Fix: replace hinclude() with include() in settings.gradle

--- a/android_app/settings.gradle
+++ b/android_app/settings.gradle
@@ -15,5 +15,5 @@ dependencyResolutionManagement {
 
 rootProject.name = "Marina Hotel"
 include ':app'
-hinclude ':app'
-rootProject.name = "Login Form 2"
+sed -i 's/hinclude/include/' settings.gradle
+rootProject.name = "marina"
