--- a/.github/workflows/Run.yml
+++ b/.github/workflows/Run.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: android-actions/setup-android@v3   # يقبل JDK 17
 
       - name: Build debug APK
-        working-directory: /android_app  # أو android_app إذا كان هو الصحيح
+        working-directory: marinahotel/android_app  # أو android_app إذا كان هو الصحيح
         run: |
           chmod +x gradlew
           ./gradlew assembleDebug --stacktrace --warning-mode all
@@ -34,5 +34,5 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: marina-hotel-apk
-          path: android_app/app/build/outputs/apk/debug/app-debug.apk
+          path: marinahotel/android_app/app/build/outputs/apk/debug/app-debug.apk
           retention-days: 30
