--- a/.github/workflows/Run.yml
+++ b/.github/workflows/Run.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: android-actions/setup-android@v3   # يقبل JDK 17
 
       - name: Build debug APK
-        working-directory: marinahotel/android_app  # أو android_app إذا كان هو الصحيح
+        working-directory: android_app  # أو android_app إذا كان هو الصحيح
         run: |
           chmod +x gradlew
           ./gradlew assembleDebug --stacktrace --warning-mode all
