--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
 name: marina_hotel_mobile
-description: Marina Hotel Android app (offline-first) with Drift + sync
+description: Marina Hotel Android app scaffold (RTL, Material 3)
 publish_to: 'none'
 version: 0.1.0+1
 
@@ -14,29 +14,25 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
-  dio: ^5.6.0
-  drift: ^2.18.0
-  sqlite3_flutter_libs: ^0.5.0
-  path_provider: ^2.1.4
-  path: ^1.9.0
-  freezed_annotation: ^2.4.1
+  dio: ^5.5.0
+  drift: ^2.16.0
+  drift_sqflite: ^2.0.1
+  sqlite3_flutter_libs: ^0.5.24
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  connectivity_plus: ^6.0.5
+  connectivity_plus: ^6.0.3
   flutter_secure_storage: ^9.2.2
-  fl_chart: ^0.70.0
+  fl_chart: ^0.68.0
   image_picker: ^1.1.2
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.3.1
   intl: ^0.19.0
-  gap: ^3.0.1
-  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.12
-  freezed: ^2.5.2
-  json_serializable: ^6.9.0
-  drift_dev: ^2.18.0
+  build_runner: ^2.4.10
+  freezed: ^2.5.7
+  drift_dev: ^2.16.0
 
 flutter:
   uses-material-design: true
