--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -1,12 +1,18 @@
 name: Android Debug APK
 
 on:
+  push:
+    branches:
+      - main
+      - capy/cap-1-af4ee71a
+      - capy/build-marina-hotel-f-ff5e5722
+      - 'feature/**'
   workflow_dispatch:
     inputs:
       baseApiUrl:
-        description: 'BASE_API_URL for build'
+        description: 'BASE_API_URL for build (optional)'
         required: false
-        default: 'http://hotelmarina.com/MARINA_HOTEL_PORTABLE/api/v1'
+        default: ''
 
 jobs:
   build-debug:
@@ -51,9 +57,11 @@ jobs:
 
       - name: Build APK (debug)
         working-directory: mobile
-        env:
-          BASE_API_URL: ${{ github.event.inputs.baseApiUrl }}
-        run: flutter build apk --debug --dart-define=BASE_API_URL=$BASE_API_URL
+        run: |
+          API="${{ github.event.inputs.baseApiUrl }}"
+          if [ -z "$API" ]; then API="http://hotelmarina.com/MARINA_HOTEL_PORTABLE/api/v1"; fi
+          echo "Using BASE_API_URL=$API"
+          flutter build apk --debug --dart-define=BASE_API_URL=$API
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
